<resources>
    <string name="app_name">Timely</string>

    <string name="Title_today">Записи на сьогодні</string>
    <string name="Title_this_week">Записи на неділю</string>
    <string name="Title_this_mounts">Записи на місяць</string>
    <string name="All_entries">Всі записи</string>
    <string name="Earning">Заробіток</string>
    <string name="Setings">Налаштування</string>
    <string name="New_entries">Новий запис</string>


<!-- NEW ENTRIES   -->
    <string name="client_name">Ім\'я</string>
    <string name="client_secondname">Призвище</string>
    <string name="client_thirdname">Побатькові</string>
    <string name="client_number">Номер телефону</string>
    <string name="client_dateof">Дата прийому</string>
    <string name="client_dateof_hint">дд/мм/рррр</string>
    <string name="client_timeof">Час прийому</string>
    <string name="client_timeof_hint">00:00</string>
    <string name="client_price">Ціна</string>
    <string name="client_price_hint">0</string>
    <string name="client_additional">Побажання або додаткова інформація</string>
    <string name="client_btn">Додати запис</string>
    <string name="client_btn_update">Оновити</string>
    <string name="client_delete">Видалити </string>
<!--\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\-->
<!--CLIENT ITEM ENTRY-->
    <string name="price_text">Ціна: </string>
    <string name="time_text">Час прийому: </string>
<!--\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\-->
<!--ALL TITLE FRAGMENT-->
    <string name="all_entries">Всі записи </string>
    <string name="today_entries">Записи на сьогодні </string>
    <string name="week_entries">Записи на неділю </string>
    <string name="mounts_entries">Записи на місяць </string>
<!--\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\-->
    <string name="done_dialog">Виконано </string>
    <string name="update_dialog">Оновити </string>
    <string name="price_dialog">Ціна: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="today_earning">Сьогодні</string>
    <string name="week_earning">Неділя</string>
    <string name="month_earning">Місяць</string>
    <string name="kvartal_earning">Квартал</string>
    <string name="count_clients_earning">Кількість клієнтів:</string>
    <string name="summa_earning">Сума:</string>
    <string name="earning">Заробіток:</string>



</resources>