<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4E4E"
    tools:context=".New_entries">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginStart="0sp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/gabriela"
            android:gravity="center_horizontal"
            android:text="@string/New_entries"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="642dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="60dp"
            android:background="@color/items_main_color"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"

                android:fontFamily="@font/gabriela"
                android:hint="@string/client_name"
                android:inputType="text"
                android:textColorHint="#80FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextSecondName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/gabriela"
                android:hint="@string/client_secondname"
                android:inputType="text"
                android:textColorHint="#80FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextThirdName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/gabriela"
                android:hint="@string/client_thirdname"
                android:inputType="text"
                android:textColorHint="#80FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/gabriela"
                android:hint="@string/client_number"
                android:inputType="phone"
                android:textColorHint="#80FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/client_dateof"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="392dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:height="45dp"
                    android:ems="10"
                    android:fontFamily="@font/gabriela"
                    android:hint="@string/client_dateof_hint"
                    android:inputType="date"
                    android:textColorHint="#80FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/client_timeof"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="392dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:height="45dp"
                    android:ems="10"
                    android:fontFamily="@font/gabriela"
                    android:hint="@string/client_timeof_hint"
                    android:inputType="time"
                    android:textColorHint="#80FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/client_price"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="392dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:height="45dp"
                    android:ems="10"
                    android:fontFamily="@font/gabriela"
                    android:hint="@string/client_price_hint"
                    android:inputType="numberDecimal"
                    android:textColorHint="#80FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gabriela"
                android:text="@string/client_additional"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextAdditional"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:height="48dp"
                android:ems="10"
                android:fontFamily="@font/gabriela"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColorHint="#80FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Add_btn"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="213dp"
                android:layout_height="67dp"
                android:layout_gravity="right"
                android:background="@color/Drawer_main_color"
                android:backgroundTint="@color/Drawer_main_color"
                android:fontFamily="@font/gabriela"
                android:text="@string/client_btn"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
