<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/white_border">

            <TextView
                android:id="@+id/fullname_dialog"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/gabriela"
                android:gravity="top|left"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/number_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/gabriela"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#fcb8b8"
                android:textSize="22sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/time_dialog"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/price_dialog"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/price_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gabriela"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/additional_doalog"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/gabriela"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delBtn_dialog"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="@string/done_dialog"
                    app:cornerRadius="10dp"
                    android:textColor="#FFFFFF"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="1dp" />


                <Button
                    android:id="@+id/updateBtn_dialog"

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="@string/update_dialog"
                    app:cornerRadius="10dp"
                    android:backgroundTint="#FFFFFF"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>